# pgp-words.rs

./: Cargo.toml  README.md  pgp-words.1
src/: lib.rs  main.rs
